@@ -1,5 +1,10 @@
 2005-08-04  John McCutchan  <ttb@tentacle.dhs.org>
 
+	* server/gam_eq.c: (gam_eq_queue), (gam_eq_flush): Fix a segfault when the
+	event queue is empty. Add some GAM_DEBUG's supressed by GAM_EQ_VERBOSE.
+
+2005-08-04  John McCutchan  <ttb@tentacle.dhs.org>
+
 	* server/gam_inotify.c: (gam_inotify_is_running):
 	* server/gam_inotify.h: Add gam_inotify_is_running. Returns TRUE when
 	the inotify backend is being used.
